Pretty much fixed the layout issues with the navbar resizing. Today is a glorious day!

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -10,13 +10,6 @@
   box-shadow: 0 2px 2px -2px rgba(0,0,0,1);
   overflow: hidden;
 
-  &-container {
-
-
-
-
-  }
-
   &-title {
     position: relative;
     align-items: center;
@@ -31,6 +24,7 @@
   }
 
   &-menu {
+    display: flex;
     flex: 2;
     order: 1;
   }
@@ -56,8 +50,8 @@
   &-search {
     order: 2;
     width: 100%;
-
     flex: 3;
+    display: flex;
 
     @media only screen and (max-width: 768px) {
       flex: 9;
@@ -107,6 +101,7 @@
   }
 
   &-cart {
+    display: flex;
     flex: 2;
     order: 3;
     justify-content: flex-end;
